--- a/package.json
+++ b/package.json
@@ -1,9 +1,5 @@
 {
-  "name": "leanote",
-  "version": "0.7",
-  "main": "main.js",
-  "devDependencies": {
-    "babel-cli": "^6.22.2",
-    "babel-preset-es2015": "^6.22.0"
-  }
+  "name": "YingNote",
+  "version": "0.0.1",
+  "main": "main.js"
 }
