20170331 1. add the app icon and tray icon

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "YingNote",
+  "productName": "YingNote",
   "version": "0.0.1",
-  "main": "main.js"
+  "main": "main.js",
+  "devDependencies": {
+    "electron": "1.4.15"
+  }
 }
